--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -34,7 +34,7 @@
 */
 
 // Define base and accent colors
-$base-color: #3498db;
+$base-color: #ff0090;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
@@ -940,6 +940,10 @@ footer {
         }
 
         h2 {
+            font-size: 1.3em;
+        }
+        
+        h3 {
             font-size: 1.3em;
         }
 
