--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -38,7 +38,7 @@ $base-color: #3498db;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
-$background: #fff;
+$background: #119DAB;
 $background-alt: #f2f2f5;
 
 // Define border colors
@@ -687,6 +687,62 @@ footer {
 #more-projects {
     display: none;
 }
+
+
+/*
+    -------------------------------
+    ----- 8b. Education Styles -----
+    -------------------------------
+*/
+
+#education {
+    padding: 100px 30px 20px 45px;
+    border-bottom: 1px solid $border;
+    text-align: center;
+
+    h2 {
+        color: $heading;
+        margin-bottom: 50px;
+    }
+}
+
+.education-block {
+    max-width: 1000px;
+    margin: 0 auto 30px auto;
+    padding: 15px;
+    border: 1px solid $border;
+    text-align: left;
+
+    h3 {
+        font-weight: 500;
+        float: left;
+        margin: 0;
+        color: $heading;
+    }
+
+    span {
+        color: $text;
+        float: right;
+    }
+
+    h4 {
+        color: $text;
+        clear: both;
+        font-weight: 500;
+        margin: 0 0 15px 0;
+    }
+
+    p, ul {
+        margin: 0;
+        color: $text;
+        font-size: 0.9em;
+    }
+
+    ul {
+        padding: 0 0 0 15px;
+    }
+}
+
 
 /*
     -------------------------------
