--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -34,17 +34,12 @@
 */
 
 // Define base and accent colors
-$base-color: #ff0090;
+$base-color: #21CEDF;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
-<<<<<<< HEAD
-$background: #119DAB;
+$background: #fff;
 $background-alt: #f2f2f5;
-=======
-$background: #ff0090;
-$background-alt: #ff0090;
->>>>>>> 7f73fb2133d309f53de138e41146730ba6c166b1
 
 // Define border colors
 $border: #dcd9d9;
