--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -42,11 +42,11 @@ $background: #21CEDF;
 $background-alt: #21CEDF;
 
 // Define border colors
-$border: #dcd9d9;
+$border: #21CEDF;
 
 // Define text colors
-$heading: #374054;
-$text: #74808a;
+$heading: #21CEDF;
+$text: #21CEDF;
 
 /*
     ---------------------
