--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -34,19 +34,19 @@
 */
 
 // Define base and accent colors
-$base-color: #21CEDF;
+$base-color: #3498db;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
-$background: #21CEDF;
-$background-alt: #21CEDF;
+$background: #fff;
+$background-alt: #f2f2f5;
 
 // Define border colors
-$border: #21CEDF;
+$border: #dcd9d9;
 
 // Define text colors
-$heading: #21CEDF;
-$text: #21CEDF;
+$heading: #374054;
+$text: #74808a;
 
 /*
     ---------------------
